# protoc-gen-lua

./: .gitignore  CMakeLists.txt  pb.c
plugin/: protoc-gen-lua
protobuf/: CMakeLists.txt  Makefile  containers.lua  decoder.lua  descriptor.lua  encoder.lua  init.lua  listener.lua  pb.c  protobuf.lua  text_format.lua  type_checkers.lua  wire_format.lua
test/: person.proto  test.lua
